Configuracion_APIs/API-Cartas/api-cartas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-cartas
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: api-cartas.eb36bc0f9bda49e495fa.eastus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: api-cartas
            port: 
              number: 9000
